commit to deploy

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/SignatureBankLogo.svg" />
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      <meta content="" name="keywords">
-      <meta content="" name="description">
+      <meta name="description" content="NSB - At National Signature Bank, we believe in the power of your aspirations. Our mission is to fuel your dreams and support your journey to financial success">
+      <meta name="keywords" content="finance, money, bank">
+      <title>National Signature Bank</title>
 
       <!-- Google Web Fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
