--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/SignatureBankLogo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      <meta name="description" content="NSB - At National Signature Bank, we believe in the power of your aspirations. Our mission is to fuel your dreams and support your journey to financial success">
-      <meta name="keywords" content="finance, money, bank">
-      <title>National Signature Bank</title>
+      <meta content="" name="keywords">
+      <meta content="" name="description">
 
       <!-- Google Web Fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,14 +37,14 @@
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/wow/wow.min.js" type="module"></script>
+    <script src="lib/easing/easing.min.js" type="module"></script>
+    <script src="lib/waypoints/waypoints.min.js" type="module"></script>
+    <script src="lib/counterup/counterup.min.js" type="module"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js" type="module"></script>
 
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
